--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
   - prod
 
 variables:
-  DEPLOY_SECRETS: "secrets/vks"
+  DEPLOY_SECRETS: "secrets/graylog"
 
 # Test Section
 
@@ -26,7 +26,7 @@ YAML Linter:
     - git clone ${CI_SERVER_PROTOCOL}://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}/${DEPLOY_SECRETS}/${CI_JOB_STAGE}.git "./inventories/${CI_JOB_STAGE}/secrets" || true
   script:
     - ansible-galaxy install -f -r ./requirements.yml
-    - ansible-playbook ./deploy.yml -i "./inventories/${CI_JOB_STAGE}/hosts"
+    - ansible-playbook ./deploy_${CI_JOB_STAGE}.yml -i "./inventories/${CI_JOB_STAGE}/hosts"
   after_script:
     - rm -rf ./*
   tags:
