--- a/deploy_stage.yml
+++ b/deploy_stage.yml
@@ -43,4 +43,4 @@
           service:
             name: graylog-server
             state: started
-      when: restoring_mongobackup_graylog | default(false)
+      when: restoring_mongobackup_graylog | default(false) and mongodb_package_installed.changed
